--- a/build.xml
+++ b/build.xml
@@ -27,41 +27,24 @@
 **
 **
 -->
-<project name="myPluginName" default="dist" basedir=".">
-
+<project name="touchscreenhelper" default="dist" basedir=".">
 	<!-- enter the SVN commit message -->
 	<property name="commit.message" value="Commit message" />
 	<!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
-	<property name="plugin.main.version" value="" />
+	<property name="plugin.main.version" value="3208" />
 
-
-	<!--
-      ************************************************
-      ** should not be necessary to change the following properties
-     -->
-	<property name="josm"                   location="../../core/dist/josm-custom.jar"/>
+	<property name="josm"                   location="../../dist/josm-custom.jar"/>
 	<property name="plugin.build.dir"       value="build"/>
 	<property name="plugin.src.dir"         value="src"/>
-	<!-- this is the directory where the plugin jar is copied to -->
 	<property name="plugin.dist.dir"        value="../../dist"/>
 	<property name="ant.build.javac.target" value="1.5"/>
 	<property name="plugin.dist.dir"        value="../../dist"/>
 	<property name="plugin.jar"             value="${plugin.dist.dir}/${ant.project.name}.jar"/>
 
-	<!--
-    **********************************************************
-    ** init - initializes the build
-    **********************************************************
-    -->
 	<target name="init">
 		<mkdir dir="${plugin.build.dir}"/>
 	</target>
 
-	<!--
-    **********************************************************
-    ** compile - complies the source tree
-    **********************************************************
-    -->
 	<target name="compile" depends="init">
 		<echo message="compiling sources for  ${plugin.jar} ... "/>
 		<javac srcdir="src" classpath="${josm}" debug="true" destdir="${plugin.build.dir}">
@@ -70,11 +53,6 @@
 		</javac>
 	</target>
 
-	<!--
-    **********************************************************
-    ** dist - creates the plugin jar
-    **********************************************************
-    -->
 	<target name="dist" depends="compile,revision">
 		<echo message="creating ${ant.project.name}.jar ... "/>
 		<copy todir="${plugin.build.dir}/resources">
@@ -90,33 +68,18 @@
 			</fileset>
 		</copy>
 		<jar destfile="${plugin.jar}" basedir="${plugin.build.dir}">
-			<!--
-        ************************************************
-        ** configure these properties. Most of them will be copied to the plugins
-        ** manifest file. Property values will also show up in the list available
-        ** plugins: http://josm.openstreetmap.de/wiki/Plugins.
-        **
-        ************************************************
-    -->
-			<manifest>
-				<attribute name="Author" value="..."/>
-				<attribute name="Plugin-Class" value="..."/>
-				<attribute name="Plugin-Date" value="${version.entry.commit.date}"/>
-				<attribute name="Plugin-Description" value="..."/>
-				<attribute name="Plugin-Link" value="..."/>
-				<attribute name="Plugin-Mainversion" value="${plugin.main.version}"/>
-				<attribute name="Plugin-Version" value="${version.entry.commit.revision}"/>
-			</manifest>
+		<manifest>
+			<attribute name="Author" value="glebius@glebius.int.ru"/>
+			<attribute name="Plugin-Class" value="touchscreenhelper.TouchScreenHelperPlugin"/>
+			<attribute name="Plugin-Date" value="${version.entry.commit.date}"/>
+			<attribute name="Plugin-Description" value="Provides helper buttons to allow working with single button mouse (stylus). Currently adds only one button to slip the map."/>
+			<attribute name="Plugin-Link" value="..."/>
+			<attribute name="Plugin-Mainversion" value="${plugin.main.version}"/>
+			<attribute name="Plugin-Version" value="${version.entry.commit.revision}"/>
+		</manifest>
 		</jar>
 	</target>
 
-	<!--
-    **********************************************************
-    ** revision - extracts the current revision number for the
-    **    file build.number and stores it in the XML property
-    **    version.*
-    **********************************************************
-    -->
 	<target name="revision">
 
 		<exec append="false" output="REVISION" executable="svn" failifexecutionfails="false">
@@ -129,21 +92,11 @@
 		<delete file="REVISION"/>
 	</target>
 
-	<!--
-    **********************************************************
-    ** clean - clean up the build environment
-    **********************************************************
-    -->
 	<target name="clean">
 		<delete dir="${plugin.build.dir}"/>
 		<delete file="${plugin.jar}"/>
 	</target>
 
-	<!--
-    **********************************************************
-    ** install - install the plugin in your local JOSM installation
-    **********************************************************
-    -->
 	<target name="install" depends="dist">
 		<property environment="env"/>
 		<condition property="josm.plugins.dir" value="${env.APPDATA}/JOSM/plugins" else="${user.home}/.josm/plugins">
@@ -155,14 +108,6 @@
 	</target>
 
 
-	<!--
-	************************** Publishing the plugin *********************************** 
-	-->
-	<!--
-		** extracts the JOSM release for the JOSM version in ../core and saves it in the 
-		** property ${coreversion.info.entry.revision}
-		**
-		-->
 	<target name="core-info">
 		<exec append="false" output="core.info.xml" executable="svn" failifexecutionfails="false">
 			<env key="LANG" value="C"/>
@@ -176,9 +121,6 @@
 		<delete file="core.info.xml" />
 	</target>
 
-	<!--
-		** commits the source tree for this plugin
-		-->
 	<target name="commit-current">
 		<echo>Commiting the plugin source with message '${commit.message}' ...</echo>
 		<exec append="true" output="svn.log" executable="svn" failifexecutionfails="false">
@@ -189,9 +131,6 @@
 		</exec>
 	</target>
 
-	<!--
-		** updates (svn up) the source tree for this plugin
-		-->
 	<target name="update-current">
 		<echo>Updating plugin source ...</echo>
 		<exec append="true" output="svn.log" executable="svn" failifexecutionfails="false">
@@ -207,9 +146,6 @@
 		</exec>
 	</target>
 
-	<!--
-		** commits the plugin.jar 
-		-->
 	<target name="commit-dist">
 		<echo>
 	***** Properties of published ${plugin.jar} *****
@@ -229,7 +165,6 @@
 		</exec>
 	</target>
 
-	<!-- ** make sure svn is present as a command line tool ** -->
 	<target name="ensure-svn-present">
 		<exec append="true" output="svn.log" executable="svn" failifexecutionfails="false" failonerror="false" resultproperty="svn.exit.code">
 			<env key="LANG" value="C" />
